test/sematest/invalid/redefinition_of_method2.java
class A {
  public static void main(String[] args) {

  }
  public int a(){

  }

  public boolean a(){

  }
}